fix dark mode color

--- a/src/themes.css
+++ b/src/themes.css
@@ -75,7 +75,7 @@
   --text: #bfbfbf;
   --text-button: url("/assets/buttons/text-button-dark.png");
   --text-button-hover: url("/assets/buttons/text-button-hover.png");
-  --text-default: #000;
+  --text-default: #c7c7c7;
   --text-input: white;
   --text-info: #757575;
   --text-markdown: #f0f0f0;
